# MorphoClaw

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  SECURITY.md  TESTING.md  _config.yml  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt
.autoresearchclaw_smoke/integrity/: 20260516_013240_report.json  20260516_013240_report.md
.github/: dependabot.yml  issue-commands.md  verification-progress-template.md
.github/ISSUE_TEMPLATE/: comparison_request.yml  config.yml
.github/actions/check-approval/: action.yml
.github/actions/comment-progress/: action.yml
.github/actions/extract-issue-fields/: action.yml
.github/actions/update-approval/: action.yml
.github/actions/update-status-label/: action.yml
.github/scripts/: _slicer_config.json  chat_handler.py  crop_around_mesh.py  dicom_to_nifti.py  eval_project358382_pilot.py  find_segmentation_pairs.py  install_nninteractive.sh  install_nninteractive_remote.sh  install_seg_train_extras.sh  integrity_cache.py  integrity_graph.py  integrity_verifiers.py  morphosource_api.py  morphosource_client.py  nni_ws_server.py  nninteractive_compare.py  nninteractive_loop.py  nninteractive_remote.py  nninteractive_segment.py  patch_runner_aqua_session.sh  remote_volume_io.py  research_agent.py  run_telemetry.py  segmentation_metrics.py  slicer_advanced_analysis.py  slicer_agent.py  slicer_drive_demo.py  slicer_install_monai.py  slicer_install_nninteractive.py  slicer_interactive.py  slicer_load_test.py  slicer_monai_seg.py  slicer_remote_bright_seed.py  slicer_remote_loop.py  slicer_remote_smoke.py  slicer_tool.py  start_remote_server.sh  test_chameleon_stapes.sh  tiff_stack_to_nifti.py  verify_research_run.py  (+2 more)
.github/workflows/: autoresearchclaw.yml  bootstrap_nninteractive.yml  code-quality.yml  docs.yml  issue-commands.yml  iterative_segmentation_training.yml  labels.yml  nninteractive_compare.yml  on-admin-mention.yml  on-request-opened.yml  parse_morphosource.yml  request-initial-comments.yml  request-labeler.yml  request-notify-admin.yml  seg_train_live_chameleon.yml  seg_train_tests.yml  slicer-integration.yml  tests.yml  verify-comparison.yml  verify_research_run.yml
Tests/: smoke_seg_train.sh  test_chameleon_stapes_iterative.sh  test_eval_project358382.sh  test_integrity_cache.py  test_integrity_graph.py  test_integrity_verifiers.py  test_morphosource_client.py  test_seg_train_cli.py  test_seg_train_dataset.py  test_seg_train_integration.py  test_seg_train_ledger.py  test_seg_train_paper_export.py  test_seg_train_prepare.py  test_seg_train_router.py  test_slicer_cached_model.py  test_tool_calls.py  test_verify_research_run.py
Tests/fixtures/: __init__.py  tetrahedron.ply
data/knowledge-graph/: 20260323_161449_primate_skull_morphology_comparative_ana_graph.html  20260323_161449_primate_skull_morphology_comparative_ana_graph.json  20260323_163629_lets_develop_a_follow_up_research_paper_graph.html  20260323_163629_lets_develop_a_follow_up_research_paper_graph.json  20260323_202413_lets_develop_a_follow_up_research_paper_graph.html  20260323_202413_lets_develop_a_follow_up_research_paper_graph.json  20260512_192348_show_me_lizard_data_from_texas_graph.html  20260512_192348_show_me_lizard_data_from_texas_graph.json
docs/: DEPLOYMENT_NOTES.md  INTEGRITY_VERIFIER.md  ISSUE_AUTOMATION.md  ITERATIVE_SEGMENTATION.md  QUERY_SUBMISSION_GUIDE.md  QUERY_SYSTEM_GUIDE.md  QUICK_START.md  architecture.md  changelog.md  contributing.md  index.md  knowledge-graph.md  query.html  query.md  quick-start.md
docs/assets/css/: extra.css  knowledge-graph.css
docs/assets/js/: knowledge-graph.js
docs/data/: knowledge_graph.json
docs/data/runs/: _manifest.json
docs/overrides/: main.html
docs/reference/: cli.md  project-structure.md  secrets.md  workflows.md
docs/scripts/: import_run_artifact.py  merge_graphs.py
metadata_to_morphsource/seg_train/: __init__.py  __main__.py  cli.py  confidence_router.py  dataset.py  experiment_ledger.py  iterative_trainer.py  paper_export.py  prepare_specimen.py  pseudo_label_generator.py  student_model.py
runs/dryrun/final/: state.json
runs/dryrun/step_00/: state.json
runs/impc_bright/: summary.json
runs/impc_bright/step_00/: state.json
runs/impc_bright/step_01/: state.json
runs/impc_bright/step_02/: state.json
runs/impc_bright/step_03/: state.json
runs/impc_bright/step_04/: state.json
runs/impc_bright/step_05/: state.json
runs/impc_bright/step_06/: state.json
runs/impc_bright/step_07/: state.json
runs/impc_bright/step_08/: state.json
runs/impc_bright_v2/: summary.json
runs/impc_bright_v2/step_00/: state.json
runs/impc_bright_v2/step_01/: state.json
runs/impc_bright_v2/step_02/: state.json
runs/impc_bright_v2/step_03/: state.json
runs/impc_bright_v2/step_04/: state.json
runs/impc_bright_v2/step_05/: state.json
runs/impc_bright_v2/step_06/: state.json
runs/impc_bright_v2/step_07/: state.json
runs/impc_bright_v2/step_08/: state.json
runs/impc_bright_v2/step_09/: state.json
runs/impc_bright_v2/step_10/: state.json
runs/impc_bright_v2/step_11/: state.json
runs/impc_bright_v3/: summary.json
runs/impc_bright_v3/step_00/: state.json
runs/impc_bright_v3/step_01/: state.json
runs/impc_bright_v3/step_02/: state.json
runs/impc_bright_v3/step_03/: state.json  threeD.err
runs/impc_bright_v3/step_04/: state.json
runs/impc_bright_v3/step_05/: state.json
runs/impc_bright_v3/step_06/: state.json
runs/impc_bright_v3/step_07/: state.json
runs/impc_bright_v4/: summary.json
runs/impc_bright_v4/step_00/: state.json
runs/impc_bright_v4/step_01/: state.json
runs/impc_bright_v4/step_02/: state.json
runs/impc_bright_v4/step_03/: state.json
runs/impc_bright_v4/step_04/: state.json
runs/impc_bright_v4/step_05/: state.json
runs/impc_bright_v4/step_06/: state.json
runs/impc_bright_v5/: summary.json
runs/impc_telem/: environment.json  events.jsonl  inputs.json  log.txt  manifest.json  replay.sh  stop_reason.json  summary.json
(+38 files in other folders)
