[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "metadata-to-morphsource-compare"
version = "1.0.0"
description = "A tool for researchers to compare specimen metadata with MorphoSource database records"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "MorphoSource Research Team"}
]
keywords = ["morphosource", "bioinformatics", "specimen", "metadata", "comparison"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "requests>=2.28.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.20.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "ipywidgets>=8.0.0",
    "PyYAML>=6.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "isort>=5.12.0",
    "bandit>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/johntrue15/Metadata-to-Morphsource-compare"
Documentation = "https://johntrue15.github.io/Metadata-to-Morphsource-compare/"
Repository = "https://github.com/johntrue15/Metadata-to-Morphsource-compare"
Issues = "https://github.com/johntrue15/Metadata-to-Morphsource-compare/issues"

[project.scripts]
morpho = "morpho.cli:main"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | Tests
  | data
  | docs/archive
)/
'''

# Ruff: fast, single-binary replacement for flake8 + isort + pyupgrade.
# We deliberately mirror the rule set already encoded in `.flake8` so
# the CI workflow and existing local pre-commit hooks agree on what
# "lint-clean" means.  See https://docs.astral.sh/ruff/rules/.
[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "venv",
    "env",
    "ENV",
    "build",
    "dist",
    "*.egg-info",
    ".tox",
    "Tests",
    "data",
    "docs/archive",
]

[tool.ruff.lint]
# Rule groups (loosely mapped from flake8 + sensible Ruff additions).
# Anything not in this list is silent.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (undefined names, unused imports, ...)
    "I",    # isort (replaces standalone isort)
    "B",    # flake8-bugbear (likely bugs)
    "UP",   # pyupgrade (modernise stdlib idioms)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PL",   # pylint subset
    "RUF",  # Ruff-specific
]
# Match `.flake8` ignores (E203 / W503 conflict with Black; E501 is
# governed by `line-length`; the rest are pragmatic for a research
# repo with notebook-style scripts).
ignore = [
    "E203",    # whitespace before ':' (Black-compatible)
    "E501",    # handled by line-length
    "PLR0913", # too many arguments — common in research code
    "PLR0912", # too many branches — ditto
    "PLR0915", # too many statements — ditto
    "PLR0911", # too many return statements
    "PLR2004", # magic numbers — too noisy for plotting / scoring code
    "B008",    # function call in default arg (used for dataclass defaults)
    "SIM108",  # ternary suggestions — sometimes hurts readability
    "PLC0415", # import-outside-top-level (we use lazy imports for optional deps)
    "PLW0603", # global-statement (module-level cache state is deliberate)
    "RUF002",  # ambiguous-unicode-character-docstring (we use en-dashes intentionally)
    "RUF003",  # ambiguous-unicode-character-comment
    # ----------------------------------------------------------------
    # PEP 585 / PEP 604 typing modernisation.  The repo still ships
    # for Python 3.9 (see [project] requires-python).  Migrating to
    # `dict[str, int]` and `int | None` will be a dedicated PR once
    # the floor is raised to 3.10.  Until then, treat as advisory.
    # ----------------------------------------------------------------
    "UP006",   # non-pep585-annotation
    "UP007",   # non-pep604-annotation-union
    "UP035",   # deprecated-import (typing.Dict, typing.List, ...)
    "UP037",   # quoted-annotation
    "UP045",   # non-pep604-annotation-optional
]

# Project-wide "always-blocking" rules.  These are what the CI's
# "syntax-and-correctness" gate enforces against the entire repo,
# even for files that have not been touched by the current PR.  Keep
# this set small and uncontroversial.
[tool.ruff.lint.per-file-ignores]
"Tests/**" = ["PLR2004", "S101", "B018"]
"setup.py" = ["B"]
"verify_pixel_spacing.py" = ["E"]  # legacy script with known pre-existing issues
"compare.py" = ["E"]                # ditto

[tool.ruff.lint.isort]
known-first-party = ["morpho", "metadata_to_morphsource"]
combine-as-imports = true

[tool.ruff.format]
# Defer formatting to Black for now; this prevents Ruff's formatter
# from competing with the pre-commit Black hook.
quote-style = "preserve"
indent-style = "space"

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
skip = [".git", "__pycache__", "venv", "env", "build", "dist"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/env/*",
    "setup.py",
    "*/Tests/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = ["tests", "Tests", ".venv", "venv"]
skips = ["B101", "B601"]  # assert_used, shell=True

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]
